refactor: use collect(Collectors.toList()) instead of toList()